--- a/notebooks/product_fidelity_eval_video.ipynb
+++ b/notebooks/product_fidelity_eval_video.ipynb
@@ -33,9 +33,9 @@
     "\n",
     "Gemini is used to generate a detailed description of an original product image and then using that description as the \"prompt\" for Gecko.\n",
     "\n",
-    "By generating a high-fidelity text description of your product, you effectively convert an **image-to-image consistency** task (checking if the generated product matches the original) into the **text-to-image alignment** task that Gecko is built to perform.\n",
+    "By generating a high-fidelity text description of your product, you effectively convert an image-to-video consistency task (checking if the generated product matches the original) into the text-to-video alignment task that Gecko is built to perform.\n",
     "\n",
-    "The intent of this approach is to transform an image-consistency task into a text-alignment task, enabling \"rubric-based\" and \"interpretable\" nature to receive granular, diagnostic feedback on exactly which product details (such as color, shape, or texture) were preserved or lost.\n",
+    "The intent of this approach is to transform an media-consistency task into a text-alignment task, enabling \"rubric-based\" and \"interpretable\" nature to receive granular, diagnostic feedback on exactly which product details (such as color, shape, or texture) were preserved or lost.\n",
     "\n",
     "This process can be automated at scale using the Google Cloud GenAI Evaluation Suite. This notebook generates an evaluation report for HITL reference."
    ]
@@ -48,7 +48,7 @@
    "source": [
     "## Evaluation Framework Overview\n",
     "\n",
-    "Gecko is architected as a reference-free \"text-to-image\" evaluation metric that assesses alignment by verifying if specific keywords and attributes from a text prompt appear in a generated image.\n",
+    "Gecko is architected as a reference-free \"text-to-video\" evaluation metric that assesses alignment by verifying if specific keywords and attributes from a text prompt appear in a generated video.\n",
     "\n",
     "### The Rubric Generation Step \n",
     "\n",
@@ -166,7 +166,7 @@
    "source": [
     "# Generate Faithful Description based on Original Products\n",
     "\n",
-    "Use Gemini to review the original product image and generate a description that accurately captures the details, difelity, and faithfulness of the product. This will description will act as the \"prompt\" which Gecko uses to evaluate text to image generation."
+    "Use Gemini to review the original product image and generate a description that accurately captures the details, difelity, and faithfulness of the product. This will description will act as the \"prompt\" which Gecko uses to evaluate text to media generation."
    ]
   },
   {
@@ -524,7 +524,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing Metrics for Evaluation Dataset: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 1/1 [00:27<00:00, 27.81s/it]\n"
+      "Computing Metrics for Evaluation Dataset: 100%|██████████| 1/1 [00:27<00:00, 27.81s/it]\n"
      ]
     }
    ],
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -561,6 +561,16 @@
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/google/home/beusebio/venvs/default/lib/python3.13/site-packages/google/auth/_default.py:114: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
+      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n",
+      "/usr/local/google/home/beusebio/venvs/default/lib/python3.13/site-packages/google/auth/_default.py:114: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
+      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -575,25 +585,23 @@
     "import os\n",
     "from google.cloud import storage\n",
     "\n",
-    "def _load_media_as_base64(path: str) -> tuple[str, str, str]:\n",
+    "\n",
+    "def _load_image_as_base64(path: str) -> tuple[str, str]:\n",
     "    \"\"\"\n",
-    "    Load media (image or video) from a local path or GCS URI and return (base64_data, mime_type, media_category).\n",
-    "    Returns (None, None, None) if the media cannot be loaded.\n",
+    "    Load an image from a local path or GCS URI and return (base64_data, mime_type).\n",
+    "    Returns (None, None) if the image cannot be loaded.\n",
     "    \"\"\"\n",
     "    try:\n",
     "        # Determine mime type from extension\n",
     "        ext = path.lower().split('.')[-1]\n",
     "        mime_map = {\n",
-    "            'png': ('image/png', 'image'),\n",
-    "            'jpg': ('image/jpeg', 'image'),\n",
-    "            'jpeg': ('image/jpeg', 'image'),\n",
-    "            'gif': ('image/gif', 'image'),\n",
-    "            'webp': ('image/webp', 'image'),\n",
-    "            'mp4': ('video/mp4', 'video'),\n",
-    "            'mov': ('video/quicktime', 'video'),\n",
-    "            'webm': ('video/webm', 'video')\n",
+    "            'png': 'image/png',\n",
+    "            'jpg': 'image/jpeg',\n",
+    "            'jpeg': 'image/jpeg',\n",
+    "            'gif': 'image/gif',\n",
+    "            'webp': 'image/webp'\n",
     "        }\n",
-    "        mime_type, media_category = mime_map.get(ext, ('image/png', 'image'))\n",
+    "        mime_type = mime_map.get(ext, 'image/png')\n",
     "\n",
     "        if path.startswith('gs://'):\n",
     "            # Parse GCS path\n",
@@ -605,22 +613,23 @@
     "            client = storage.Client()\n",
     "            bucket = client.bucket(bucket_name)\n",
     "            blob = bucket.blob(blob_path)\n",
-    "            media_bytes = blob.download_as_bytes()\n",
+    "            image_bytes = blob.download_as_bytes()\n",
     "        else:\n",
     "            # Local file\n",
     "            with open(path, 'rb') as f:\n",
-    "                media_bytes = f.read()\n",
+    "                image_bytes = f.read()\n",
     "\n",
-    "        b64_data = base64.b64encode(media_bytes).decode('utf-8')\n",
-    "        return b64_data, mime_type, media_category\n",
+    "        b64_data = base64.b64encode(image_bytes).decode('utf-8')\n",
+    "        return b64_data, mime_type\n",
     "\n",
     "    except Exception as e:\n",
-    "        print(f\"Warning: Could not load media {path}: {e}\")\n",
-    "        return None, None, None\n",
+    "        print(f\"Warning: Could not load image {path}: {e}\")\n",
+    "        return None, None\n",
+    "\n",
     "\n",
     "def create_gecko_html_report(eval_result, source_uris=None, filename=\"gecko_report.html\"):\n",
     "  \"\"\"\n",
-    "  Generates an HTML report with collapsible candidate media sections.\n",
+    "  Generates an HTML report with collapsible candidate image sections.\n",
     "  \"\"\"\n",
     "\n",
     "  # 1. Access Data safely\n",
@@ -643,26 +652,23 @@
     "  else:\n",
     "    mean_score = \"N/A\"\n",
     "\n",
-    "  # --- BUILD SOURCE MEDIA HTML (with actual media) ---\n",
-    "  source_media_html = \"\"\n",
+    "  # --- BUILD SOURCE IMAGES HTML (with actual images) ---\n",
+    "  source_images_html = \"\"\n",
     "  if source_uris:\n",
     "    for uri in source_uris:\n",
     "      name = uri.split('/')[-1]\n",
-    "      b64_data, mime_type, media_category = _load_media_as_base64(uri)\n",
+    "      b64_data, mime_type = _load_image_as_base64(uri)\n",
     "\n",
     "      if b64_data:\n",
-    "        if media_category == 'video':\n",
-    "            media_tag = f'<video src=\"data:{mime_type};base64,{b64_data}\" controls style=\"max-height: 160px; max-width: 200px; border-radius: 4px; border: 1px solid #ccc;\"></video>'\n",
-    "        else:\n",
-    "            media_tag = f'<img src=\"data:{mime_type};base64,{b64_data}\" alt=\"{html.escape(name)}\" style=\"max-height: 160px; max-width: 200px; border-radius: 4px; border: 1px solid #ccc;\">'\n",
+    "        img_tag = f'<img src=\"data:{mime_type};base64,{b64_data}\" alt=\"{html.escape(name)}\" style=\"max-height: 160px; max-width: 200px; border-radius: 4px; border: 1px solid #ccc;\">'\n",
     "      else:\n",
-    "        media_tag = f'''<div style=\"height: 160px; width: 160px; background: #eee; display: flex; align-items: center; justify-content: center; border: 1px solid #ccc; border-radius: 4px;\">\n",
+    "        img_tag = f'''<div style=\"height: 160px; width: 160px; background: #eee; display: flex; align-items: center; justify-content: center; border: 1px solid #ccc; border-radius: 4px;\">\n",
     "           <span style=\"font-size: 0.8em; color: #555;\">Failed to load:<br>{html.escape(name)}</span>\n",
     "        </div>'''\n",
     "\n",
-    "      source_media_html += f\"\"\"\n",
+    "      source_images_html += f\"\"\"\n",
     "      <div class=\"orig-item\">\n",
-    "        {media_tag}\n",
+    "        {img_tag}\n",
     "        <div class=\"orig-label\">{html.escape(name)}</div>\n",
     "      </div>\n",
     "      \"\"\"\n",
@@ -720,9 +726,9 @@
     "      .summary-stats {{ color: #666; font-size: 0.85em; }}\n",
     "\n",
     "      .candidate-content {{ padding: 20px; display: flex; gap: 20px; background: #fff; }}\n",
-    "      .candidate-media {{ flex: 0 0 450px; }}\n",
-    "      .candidate-media img, .candidate-media video {{ max-width: 100%; height: auto; border-radius: 4px; border: 1px solid #eee; }}\n",
-    "      .candidate-media .gcs-placeholder {{\n",
+    "      .candidate-image {{ flex: 0 0 250px; }}\n",
+    "      .candidate-image img {{ max-width: 100%; height: auto; border-radius: 4px; border: 1px solid #eee; }}\n",
+    "      .candidate-image .gcs-placeholder {{\n",
     "        height: 200px;\n",
     "        background: #f0f0f0;\n",
     "        display: flex;\n",
@@ -765,7 +771,7 @@
     "  <div class=\"main-container\">\n",
     "    <h1>Gecko Evaluation Report</h1>\n",
     "    <div class=\"ground-truth-section\">\n",
-    "      <div class=\"gt-images\">{source_media_html}</div>\n",
+    "      <div class=\"gt-images\">{source_images_html}</div>\n",
     "      <div class=\"gt-prompt-box\">\n",
     "        <div class=\"gt-prompt-label\">Ground Truth Prompt</div>\n",
     "        <div class=\"gt-prompt-text\">{html.escape(global_prompt_text)}</div>\n",
@@ -804,42 +810,35 @@
     "    else:\n",
     "      score_class = \"score-low\"\n",
     "\n",
-    "    # Extract media name and build media HTML\n",
-    "    media_name = f\"Candidate {index + 1}\"\n",
+    "    # Extract image name and build image HTML\n",
+    "    img_name = f\"Candidate {index + 1}\"\n",
     "    try:\n",
     "      parts = row['response'].get('parts', [])\n",
     "      if parts and 'file_data' in parts[0]:\n",
     "          file_uri = parts[0]['file_data']['file_uri']\n",
-    "          media_name = file_uri.split('/')[-1]\n",
+    "          img_name = file_uri.split('/')[-1]\n",
     "\n",
-    "          # Load actual media from GCS\n",
-    "          b64_data, mime_type, media_category = _load_media_as_base64(file_uri)\n",
+    "          # Load actual image from GCS\n",
+    "          b64_data, mime_type = _load_image_as_base64(file_uri)\n",
     "          if b64_data:\n",
-    "              if media_category == 'video':\n",
-    "                  media_html = f'<video src=\"data:{mime_type};base64,{b64_data}\" controls></video>'\n",
-    "              else:\n",
-    "                  media_html = f'<img src=\"data:{mime_type};base64,{b64_data}\" alt=\"{html.escape(media_name)}\">'\n",
+    "              img_html = f'<img src=\"data:{mime_type};base64,{b64_data}\" alt=\"{html.escape(img_name)}\">'\n",
     "          else:\n",
     "              gcs_link = f\"https://console.cloud.google.com/storage/browser/_details/{file_uri.replace('gs://', '')}\"\n",
-    "              media_html = f\"\"\"<div class=\"gcs-placeholder\">\n",
+    "              img_html = f\"\"\"<div class=\"gcs-placeholder\">\n",
     "                <div>\n",
-    "                  <div style=\"font-size: 2em; margin-bottom: 10px;\">\u26a0\ufe0f</div>\n",
-    "                  <div style=\"font-size: 0.85em; color: #d93025;\">Failed to load media</div>\n",
-    "                  <a href=\"{gcs_link}\" target=\"_blank\" style=\"font-size: 0.8em;\">{html.escape(media_name)}</a>\n",
+    "                  <div style=\"font-size: 2em; margin-bottom: 10px;\">⚠️</div>\n",
+    "                  <div style=\"font-size: 0.85em; color: #d93025;\">Failed to load image</div>\n",
+    "                  <a href=\"{gcs_link}\" target=\"_blank\" style=\"font-size: 0.8em;\">{html.escape(img_name)}</a>\n",
     "                </div>\n",
     "              </div>\"\"\"\n",
     "      elif parts and 'inline_data' in parts[0]:\n",
-    "          media_bytes = parts[0]['inline_data']['data']\n",
-    "          b64_media = base64.b64encode(media_bytes).decode('utf-8')\n",
-    "          mime_type = parts[0]['inline_data'].get('mime_type', 'image/png')\n",
-    "          if mime_type.startswith('video/'):\n",
-    "              media_html = f'<video src=\"data:{mime_type};base64,{b64_media}\" controls></video>'\n",
-    "          else:\n",
-    "              media_html = f'<img src=\"data:{mime_type};base64,{b64_media}\" alt=\"Generated Media\">'\n",
+    "          img_bytes = parts[0]['inline_data']['data']\n",
+    "          b64_img = base64.b64encode(img_bytes).decode('utf-8')\n",
+    "          img_html = f'<img src=\"data:image/png;base64,{b64_img}\" alt=\"Generated Image\">'\n",
     "      else:\n",
-    "         media_html = \"<div class='gcs-placeholder'><div style='color:orange;'>No media data</div></div>\"\n",
+    "         img_html = \"<div class='gcs-placeholder'><div style='color:orange;'>No image data</div></div>\"\n",
     "    except Exception as e:\n",
-    "      media_html = f\"<div class='gcs-placeholder'><div style='color:red;'>Media Error: {e}</div></div>\"\n",
+    "      img_html = f\"<div class='gcs-placeholder'><div style='color:red;'>Image Error: {e}</div></div>\"\n",
     "\n",
     "    # Count pass/fail verdicts\n",
     "    pass_count = 0\n",
@@ -852,11 +851,11 @@
     "        if is_pass:\n",
     "          pass_count += 1\n",
     "          css_class = \"rubric-pass\"\n",
-    "          icon = \"\u2713\"\n",
+    "          icon = \"✓\"\n",
     "        else:\n",
     "          fail_count += 1\n",
     "          css_class = \"rubric-fail\"\n",
-    "          icon = \"\u2717\"\n",
+    "          icon = \"✗\"\n",
     "        try:\n",
     "          text = v.evaluated_rubric.content.property.description\n",
     "        except AttributeError:\n",
@@ -876,14 +875,14 @@
     "      <details class=\"candidate-item\" {open_attr}>\n",
     "        <summary>\n",
     "          <div class=\"summary-info\">\n",
-    "            <span class=\"summary-name\">{html.escape(media_name)}</span>\n",
+    "            <span class=\"summary-name\">{html.escape(img_name)}</span>\n",
     "            <span class=\"score-badge {score_class}\">{score:.2f}</span>\n",
     "            <span class=\"summary-stats\">{verdict_summary}</span>\n",
     "          </div>\n",
     "        </summary>\n",
     "        <div class=\"candidate-content\">\n",
-    "          <div class=\"candidate-media\">\n",
-    "            {media_html}\n",
+    "          <div class=\"candidate-image\">\n",
+    "            {img_html}\n",
     "          </div>\n",
     "          <div class=\"candidate-verdicts\">\n",
     "            <div class=\"verdict-summary\">\n",
